2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/defines.h (VS_FFI_SIGNATURE, VS_FFI_STRUCVERSION): Define.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* ntoskrnl/ke/i386/exp.c (KiKernelTrapHandler): Use exception code
	STATUS_ACCESS_VIOLATION for exception 14.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* ntoskrnl/fs/util.c (FsRtlGetFileSize): Implement.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/ntdll/rtl/nls.c (RtlCustomCPToUnicodeN, RtlMultiByteToUnicodeN,
	RtlOemToUnicodeN, RtlUnicodeToCustomCPN, RtlUnicodeToMultiByteN,
	RtlUnicodeToMultiByteSize, RtlUnicodeToOemN,
	RtlUpcaseUnicodeToCustomCPN, RtlUpcaseUnicodeToMultiByteN,
	RtlUpcaseUnicodeToOemN): Assert when unimplemented code is reached.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/ntos/zwtypes.h (FILE_BASIC_INFORMATION): Use LARGE_INTEGER,
	not TIME type for time fields.
	* lib/kernel32/file/copy.c (SetLastWriteTime): Adjust for new type.
	(CopyFileExW): Ditto.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/ntos/types.h (FALSE): Protect with #ifndef FALSE.
	(TRUE): Protect with #ifndef TRUE.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/napi/i386/segment.h (put_user, get_user,
	bad_user_access_length, __segment_dummy, __sd, __const_sd, __put_user,
	__get_user, __generic_memcpy_tofs, __constant_memcpy_tofs, COMMON,
	__generic_memcpy_fromfs, __constant_memcpy_fromfs, memcpy_fromfs,
	memcpy_tofs, get_fs_byte, get_fs_word, get_fs_long, put_fs_byte,
	put_fs_word, put_fs_long, get_user_word, get_user_byte, get_user_long,
	put_user_byte, put_user_word, put_user_long, get_fs, get_ds, set_fs,
	set_ds): Remove.

2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/ddk/pstypes.h (TLS_OUT_OF_INDEXES): Define.

2003-02-18  Casper S. Hornstrup  <chorns@users.sourceforge.net>
